# flake8-empty-init-modules

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  flake8_empty_init_modules.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
tests/: flake8_empty_init_modules_test.py
