[metadata]
name = flake8_empty_init_modules
version = 1.0.0
description = flake8 plugin that checks for code in `__init__.py` modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samueljsb/flake8-empty-init-modules
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_empty_init_modules
install_requires =
    flake8>=4
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    EIM001=flake8_empty_init_modules:EIM001
    EIM002=flake8_empty_init_modules:EIM002

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
extend-select = B9

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
